# ai-final_task

./: .env.example  .gitignore  README.md  pyproject.toml
config/: app_config.yaml
dataset/: golden_dataset.json
prompts/: disaster_agent.md  evaluate.md  healthcare_agent.md  rag_agent.md  rag_answer.md  triage_agent.md
src/chatbot/: __init__.py  main.py
src/chatbot/agent/: __init__.py  orchestrator.py  tracing.py
src/chatbot/disasters/: __init__.py  document_builder.py  repository.py
src/chatbot/healthcare/: __init__.py  nl_api.py
src/chatbot/mcp_servers/: __init__.py  disaster_server.py  healthcare_server.py  rag_server.py
src/chatbot/model/: __init__.py  schemas.py
src/chatbot/rag/: __init__.py  answer_generator.py  rag_system.py  security_facade.py
src/chatbot/rag/ingestion/: loader.py  multimodal_pdf.py  resume_text.py
src/chatbot/rag/prompts/: prompt_manager.py
src/chatbot/rag/retrieval/: bm25_index.py  embeddings.py  hybrid_retriever.py  vector_store.py
src/chatbot/security/: __init__.py  guardrails.py  pii_filter.py
src/chatbot/settings/: __init__.py  app_config.py
tests/: conftest.py
tests/fixtures/: small_disasters.csv
tests/integration/: test_disaster_mcp.py  test_healthcare_mcp.py  test_orchestrator.py
tests/unit/: test_access_control.py  test_answer_generator.py  test_bm25_index.py  test_disaster_repository.py  test_guardrails.py  test_healthcare_nl.py  test_hybrid_retriever.py  test_multimodal_pdf.py  test_pii_filter.py  test_resume_text.py  test_vector_store.py
