[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-final-chatbot"
version = "0.1.0"
description = "Multi-agent chatbot combining RAG, MCP-backed tools, and a natural disaster knowledge base"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.7",
    "mcp[cli]>=1.6.0",
    "openai>=1.30.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pypdf>=3.15.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-api>=1.27",
]

[project.optional-dependencies]
multimodal = [
    "unstructured[pdf]>=0.10.0",
    "pymupdf>=1.23.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
chatbot = "chatbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: tests that spawn MCP subprocesses or hit real services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
